--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.bime">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="false"
@@ -13,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <meta-data
+            android:name="com.google.android.gms.12.0.1"
+            android:value="AIzaSyCg_jC8Ue8dbVX7Pst6CVVgX5PgXY4mm74" />
 
         <activity android:name=".Splash">
             <intent-filter>
@@ -21,8 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".common.MainActivity">
         </activity>
+
 
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".report.ReportActivity" />
