--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-    implementation 'com.google.android.gms:play-services-maps:11.0.4'
-    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0-alpha03'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2'
 
     implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2'){
