Added track fragment and activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".report.ReportActivity" />
         <activity android:name=".mobilepayment.MobilePaymentActivity" />
         <activity android:name=".payment.PaymentActivity" />
+        <activity android:name=".track.TrackActivity"/>
     </application>
 
 </manifest>
