--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.android.material:material:1.1.0-alpha03'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
     implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2'){
         exclude group: 'group_name', module: 'module_name'
